// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hooks Api HTTP GET 1`] = `"GET"`;

exports[`Hooks Api HTTP POST 1`] = `
Object {
  "method": "POST",
  "name": "Lxxyx",
}
`;

exports[`Hooks Api get request context 1`] = `
Object {
  "path": "/api/getContext",
}
`;

exports[`Hooks Api return error 1`] = `
Object {
  "err": [Error: this is error],
}
`;

exports[`Hooks Api return object 1`] = `
Object {
  "message": "Hello World!",
}
`;

exports[`Hooks Api return string 1`] = `"Hello World"`;

exports[`Hooks Api throw custom error 1`] = `[Error]`;

exports[`Hooks Api throw error 1`] = `[Error: this is error]`;
